UX: fix cropped image thumbnails

--- a/app/assets/stylesheets/common/base/lightbox.scss
+++ b/app/assets/stylesheets/common/base/lightbox.scss
@@ -10,6 +10,10 @@
 
 .lightbox-wrapper {
   display: inline-block;
+  img {
+    object-fit: cover;
+    object-position: top;
+  }
   &,
   * {
     outline: 0;
